# lidar-coverage-pipeline

./: .gitignore  Progress.md  README.md  SPEC.md  agent.md  pyproject.toml
configs/: default.yaml
scripts/: validate_outputs.py  validate_ri_sample.py
src/lidar_coverage/: __init__.py  analysis.py  cli.py  constants.py  io.py  preprocess.py  reporting.py
tests/: test_pipeline.py
