[project]
name = "lidar-coverage"
version = "0.1.0"
description = "Pipeline for identifying U.S. Census county subdivisions lacking modern LiDAR coverage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "pyogrio>=0.10.0",
    "pyproj>=3.7.0",
    "requests>=2.32.3",
    "shapely>=2.0.7",
]
keywords = ["lidar", "geospatial", "census", "usgs", "coverage"]

[project.scripts]
lidar-coverage = "lidar_coverage.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lidar_coverage"]

[tool.uv]
package = true

[dependency-groups]
dev = []
